@@ -1,3 +1,4 @@
+  - Add a site-specific extractor for www.digitimes.com.tw
   - Add a site-specific extractor for www.hkcna.hk
 
 v0.31.0 2020-07-14T08:57:12+0800
